[project]
name = "hummuspy"
version = "0.0.4"
authors = [
  { name="Rémi Trimbour", email="remi.trimbour@pasteur.fr" },
]
description = "Python package for HuMMuS: Heterogeneous Multilayer networks for Multi-omics Single-cell data"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/cantinilab/hummus"
"Bug Tracker" = "https://github.com/cantinilab/hummus/issues"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"