[tool.poetry]
name = "hummuspy"
version = "0.0.5"
description = "HuMMuS is a novel method for the inference of regulatory mechanisms from multi-omics data with any type and number of omics, thorugh a heterogeneous multilayer networks framework."
authors = ["Rémi Trimbour <remi.trimbour@pasteur.fr>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
multixrank = "^0.1"
joblib = "^1.2.0"
tqdm = "^4.65.0"
numpy = "^1.24.2"
pandas = "^2.0.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
